--- a/scenario3.html
+++ b/scenario3.html
@@ -176,9 +176,10 @@
                 </tbody>
               </table>
               </div>
+              <a href="scenario3_etape2_01_tiers.html#garanties">
               <div class="ui toggle button">
                 CHOISIR CETTE FORMULE
-              </div>
+              </div></a>
 
 
           </div>
@@ -247,7 +248,7 @@
                       <div class="content">
                         Bris de glace<img src="images/information_colored.svg" class="iconInfo pop" data-variation="inverted" data-position="top center">
                         <div class="ui popup transition hidden">
-                          En fonction du niveau choisi, nous prenons en charge les frais de réparation ou de remplacement des éléments vitrés endommagés pare-brise, vitres, feux avant ou toit vitré.
+                          En fonction du niveau choisi, nous prenons en charge les frais de réparation ou de remplacement des éléments vitrés endommagés : pare-brise, vitres, feux avant ou toit vitré.
                         </div>
                       </div>
                     </h4>
@@ -260,7 +261,8 @@
                       <div class="content">
                         Vol, Incendie et événements climatiques<img src="images/information_colored.svg" class="iconInfo pop" data-variation="inverted" data-position="top center">
                         <div class="ui popup transition hidden">
-                          Nous vous indemnisons pour les dommages matériels subis par votre véhicule en cas de grêle, neige, tempête, ouragan ou cyclone.
+                          Nous vous indemnisons en cas de vol ou d’incendie de votre véhicule. En cas de vol, si votre véhicule est retrouvé, nous prenons en charge les réparations des dommages subis.
+Nous vous indemnisons également pour les dommages matériels subis par votre véhicule en cas de grêle, neige, tempête, ouragan ou cyclone.
                         </div>
                       </div>
                     </h4>
@@ -273,7 +275,7 @@
                       <div class="content">
                         Catastrophes naturelles, technologiques et attentats<img src="images/information_colored.svg" class="iconInfo pop" data-variation="inverted" data-position="top center">
                         <div class="ui popup transition hidden">
-                          Nous vous indemnisons pour les dommages matériels subis par votre véhicule en cas de grêle, neige, tempête, ouragan ou cyclone.
+                          Nous vous indemnisons pour les dommages matériels subis par votre véhicule à la suite d’une catastrophe naturelle ou technologique déclarée par arrêté ministériel au Journal Officiel, ou à la suite d’un attentat tel que défini par le Code pénal.
                         </div>
                       </div>
                     </h4>
@@ -292,10 +294,11 @@
                 </tbody>
               </table>
               </div>
+              <a href="scenario3_etape2_02_tiers_etendu.html#garanties">
               <div class="ui toggle button">
                 CHOISIR CETTE FORMULE
               </div>
-
+              </a>
 
           </div>
           <!-- fin de carte -->
@@ -363,7 +366,7 @@
                       <div class="content">
                         Bris de glace<img src="images/information_colored.svg" class="iconInfo pop" data-variation="inverted" data-position="top center">
                         <div class="ui popup transition hidden">
-                          En fonction du niveau choisi, nous prenons en charge les frais de réparation ou de remplacement des éléments vitrés endommagés pare-brise, vitres, feux avant ou toit vitré.
+                          En fonction du niveau choisi, nous prenons en charge les frais de réparation ou de remplacement des éléments vitrés endommagés : pare-brise, vitres, feux avant ou toit vitré.
                         </div>
                       </div>
                     </h4>
@@ -376,7 +379,8 @@
                       <div class="content">
                         Vol, Incendie et événements climatiques<img src="images/information_colored.svg" class="iconInfo pop" data-variation="inverted" data-position="top center">
                         <div class="ui popup transition hidden">
-                          Nous vous indemnisons pour les dommages matériels subis par votre véhicule en cas de grêle, neige, tempête, ouragan ou cyclone.
+                          Nous vous indemnisons en cas de vol ou d’incendie de votre véhicule. En cas de vol, si votre véhicule est retrouvé, nous prenons en charge les réparations des dommages subis.
+Nous vous indemnisons également pour les dommages matériels subis par votre véhicule en cas de grêle, neige, tempête, ouragan ou cyclone.
                         </div>
                       </div>
                     </h4>
@@ -389,7 +393,7 @@
                       <div class="content">
                         Catastrophes naturelles, technologiques et attentats<img src="images/information_colored.svg" class="iconInfo pop" data-variation="inverted" data-position="top center">
                         <div class="ui popup transition hidden">
-                          Nous vous indemnisons pour les dommages matériels subis par votre véhicule en cas de grêle, neige, tempête, ouragan ou cyclone.
+                          Nous vous indemnisons pour les dommages matériels subis par votre véhicule à la suite d’une catastrophe naturelle ou technologique déclarée par arrêté ministériel au Journal Officiel, ou à la suite d’un attentat tel que défini par le Code pénal.
                         </div>
                       </div>
                     </h4>
@@ -411,10 +415,11 @@
                 </tbody>
               </table>
               </div>
+              <a href="scenario3_etape2_03_tous_risques.html#garanties">
               <div class="ui toggle button">
                 CHOISIR CETTE FORMULE
               </div>
-
+            </a>
 
           </div>
           <!-- fin de carte -->
